dreamCompilerCore/dreamCompiler/dreamCompiler/grammar/DreamGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from DreamGrammar.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class DreamGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, Break=61, Do=62, Instanceof=63, Typeof=64, Case=65, Else=66, 
		New=67, Var=68, Catch=69, Finally=70, Return=71, Void=72, Continue=73, 
		For=74, Switch=75, While=76, Debugger=77, Function=78, This=79, With=80, 
		Default=81, If=82, Throw=83, Delete=84, In=85, Try=86, DecimalLiteral=87, 
		NULL=88, BOOLEAN=89, INT=90, FLOAT=91, DOUBLE=92, LONG=93, ESC_CHARS=94, 
		STRING=95, ID=96, WS=97, COMMENT=98, LINE_COMMENT=99, StringLiteral=100, 
		LineTerminator=101;
	public const int
		RULE_compileUnit = 0, RULE_classifications = 1, RULE_statement = 2, RULE_endLine = 3, 
		RULE_semiColon = 4, RULE_expression = 5, RULE_functionCall = 6, RULE_functionDeclaration = 7, 
		RULE_funcName = 8, RULE_returnValue = 9, RULE_leftParen = 10, RULE_rightParen = 11, 
		RULE_booleanExpression = 12, RULE_primitives = 13, RULE_command = 14, 
		RULE_userDefinedTypeDecl = 15, RULE_userDefinedTypeKeyWord = 16, RULE_userDefinedTypeName = 17, 
		RULE_variable = 18, RULE_variableDeclaration = 19, RULE_userDefinedTypeVariableDecl = 20, 
		RULE_userDefinedTypeVariableReference = 21, RULE_userDefinedTypeFunctionReference = 22, 
		RULE_add = 23, RULE_summation = 24, RULE_subtract = 25, RULE_subtraction = 26, 
		RULE_multiply = 27, RULE_multiplication = 28, RULE_breakKeyWord = 29, 
		RULE_divide = 30, RULE_division = 31, RULE_modulo = 32, RULE_moduli = 33, 
		RULE_types = 34, RULE_primitiveTypes = 35, RULE_numericTypes = 36, RULE_equalsign = 37, 
		RULE_comparisonOperator = 38, RULE_unaryOperator = 39, RULE_bitWiseOperators = 40, 
		RULE_equalequal = 41, RULE_lessthan = 42, RULE_greaterthan = 43, RULE_lessthanorequalto = 44, 
		RULE_greaterthanorequalto = 45, RULE_booleanAndOperator = 46, RULE_booleanOrOperator = 47, 
		RULE_notOperator = 48, RULE_bitAnd = 49, RULE_bitOr = 50, RULE_bitXor = 51, 
		RULE_bitNot = 52, RULE_bitLeftShift = 53, RULE_bitRigthShift = 54, RULE_keywords = 55, 
		RULE_ifExpr = 56, RULE_whileExpression = 57, RULE_doWhileExpr = 58, RULE_userDefinedTypeResolutionOperator = 59, 
		RULE_expressionSequence = 60, RULE_identifierName = 61, RULE_singleExpression = 62, 
		RULE_evaluatableExpression = 63, RULE_assignmentExpression = 64, RULE_reassignmentExpression = 65, 
		RULE_assignmentOperator = 66, RULE_literal = 67;
	public static readonly string[] ruleNames = {
		"compileUnit", "classifications", "statement", "endLine", "semiColon", 
		"expression", "functionCall", "functionDeclaration", "funcName", "returnValue", 
		"leftParen", "rightParen", "booleanExpression", "primitives", "command", 
		"userDefinedTypeDecl", "userDefinedTypeKeyWord", "userDefinedTypeName", 
		"variable", "variableDeclaration", "userDefinedTypeVariableDecl", "userDefinedTypeVariableReference", 
		"userDefinedTypeFunctionReference", "add", "summation", "subtract", "subtraction", 
		"multiply", "multiplication", "breakKeyWord", "divide", "division", "modulo", 
		"moduli", "types", "primitiveTypes", "numericTypes", "equalsign", "comparisonOperator", 
		"unaryOperator", "bitWiseOperators", "equalequal", "lessthan", "greaterthan", 
		"lessthanorequalto", "greaterthanorequalto", "booleanAndOperator", "booleanOrOperator", 
		"notOperator", "bitAnd", "bitOr", "bitXor", "bitNot", "bitLeftShift", 
		"bitRigthShift", "keywords", "ifExpr", "whileExpression", "doWhileExpr", 
		"userDefinedTypeResolutionOperator", "expressionSequence", "identifierName", 
		"singleExpression", "evaluatableExpression", "assignmentExpression", "reassignmentExpression", 
		"assignmentOperator", "literal"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'()'", "','", "'{'", "'}'", "'('", "')'", "'sysExec'", "'class'", 
		"'+'", "'add'", "'-'", "'subtract'", "'*'", "'multiply'", "'/'", "'divide'", 
		"'%'", "'modulo'", "'='", "'=='", "'<'", "'>'", "'<='", "'>='", "'&&'", 
		"'||'", "'!'", "'&'", "'|'", "'^'", "'~'", "'<<'", "'>>'", "'int'", "'float'", 
		"'double'", "'long'", "'object'", "'boolean'", "'string'", "'::'", "'['", 
		"']'", "'.'", "'++'", "'--'", "'?'", "':'", "'*='", "'/='", "'%='", "'+='", 
		"'-='", "'<<='", "'>>='", "'>>>='", "'&='", "'^='", "'|='", "'break'", 
		"'do'", "'instanceof'", "'typeof'", "'case'", "'else'", "'new'", "'var'", 
		"'catch'", "'finally'", "'return'", "'void'", "'continue'", "'for'", "'switch'", 
		"'while'", "'debugger'", "'function'", "'this'", "'with'", "'default'", 
		"'if'", "'throw'", "'delete'", "'in'", "'try'", null, "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "Break", "Do", "Instanceof", "Typeof", "Case", "Else", "New", "Var", 
		"Catch", "Finally", "Return", "Void", "Continue", "For", "Switch", "While", 
		"Debugger", "Function", "This", "With", "Default", "If", "Throw", "Delete", 
		"In", "Try", "DecimalLiteral", "NULL", "BOOLEAN", "INT", "FLOAT", "DOUBLE", 
		"LONG", "ESC_CHARS", "STRING", "ID", "WS", "COMMENT", "LINE_COMMENT", 
		"StringLiteral", "LineTerminator"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DreamGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static DreamGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DreamGrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DreamGrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class CompileUnitContext : ParserRuleContext {
		public ClassificationsContext[] classifications() {
			return GetRuleContexts<ClassificationsContext>();
		}
		public ClassificationsContext classifications(int i) {
			return GetRuleContext<ClassificationsContext>(i);
		}
		public CompileUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compileUnit; } }
	}

	[RuleVersion(0)]
	public CompileUnitContext compileUnit() {
		CompileUnitContext _localctx = new CompileUnitContext(Context, State);
		EnterRule(_localctx, 0, RULE_compileUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__8 || _la==Function) {
				{
				{
				State = 136; classifications();
				}
				}
				State = 141;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassificationsContext : ParserRuleContext {
		public FunctionDeclarationContext functionDeclaration() {
			return GetRuleContext<FunctionDeclarationContext>(0);
		}
		public UserDefinedTypeDeclContext userDefinedTypeDecl() {
			return GetRuleContext<UserDefinedTypeDeclContext>(0);
		}
		public ClassificationsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classifications; } }
	}

	[RuleVersion(0)]
	public ClassificationsContext classifications() {
		ClassificationsContext _localctx = new ClassificationsContext(Context, State);
		EnterRule(_localctx, 2, RULE_classifications);
		try {
			State = 144;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Function:
				EnterOuterAlt(_localctx, 1);
				{
				State = 142; functionDeclaration();
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 2);
				{
				State = 143; userDefinedTypeDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 146; expression();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EndLineContext : ParserRuleContext {
		public SemiColonContext semiColon() {
			return GetRuleContext<SemiColonContext>(0);
		}
		public EndLineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_endLine; } }
	}

	[RuleVersion(0)]
	public EndLineContext endLine() {
		EndLineContext _localctx = new EndLineContext(Context, State);
		EnterRule(_localctx, 6, RULE_endLine);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 148; semiColon();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SemiColonContext : ParserRuleContext {
		public SemiColonContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_semiColon; } }
	}

	[RuleVersion(0)]
	public SemiColonContext semiColon() {
		SemiColonContext _localctx = new SemiColonContext(Context, State);
		EnterRule(_localctx, 8, RULE_semiColon);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 150; Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public SingleExpressionContext singleExpression() {
			return GetRuleContext<SingleExpressionContext>(0);
		}
		public EndLineContext endLine() {
			return GetRuleContext<EndLineContext>(0);
		}
		public IfExprContext ifExpr() {
			return GetRuleContext<IfExprContext>(0);
		}
		public WhileExpressionContext whileExpression() {
			return GetRuleContext<WhileExpressionContext>(0);
		}
		public DoWhileExprContext doWhileExpr() {
			return GetRuleContext<DoWhileExprContext>(0);
		}
		public PrimitivesContext primitives() {
			return GetRuleContext<PrimitivesContext>(0);
		}
		public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public UserDefinedTypeFunctionReferenceContext userDefinedTypeFunctionReference() {
			return GetRuleContext<UserDefinedTypeFunctionReferenceContext>(0);
		}
		public UserDefinedTypeVariableReferenceContext userDefinedTypeVariableReference() {
			return GetRuleContext<UserDefinedTypeVariableReferenceContext>(0);
		}
		public ReturnValueContext returnValue() {
			return GetRuleContext<ReturnValueContext>(0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 10, RULE_expression);
		try {
			State = 173;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 152; singleExpression(0);
				State = 153; endLine();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 155; ifExpr();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 156; whileExpression();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 157; doWhileExpr();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 158; primitives();
				State = 159; endLine();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 161; functionCall();
				State = 162; endLine();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 164; userDefinedTypeFunctionReference();
				State = 165; endLine();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 167; userDefinedTypeVariableReference();
				State = 168; endLine();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 170; returnValue();
				State = 171; endLine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionCallContext : ParserRuleContext {
		public FuncNameContext funcName() {
			return GetRuleContext<FuncNameContext>(0);
		}
		public LeftParenContext leftParen() {
			return GetRuleContext<LeftParenContext>(0);
		}
		public RightParenContext rightParen() {
			return GetRuleContext<RightParenContext>(0);
		}
		public ITerminalNode[] WS() { return GetTokens(DreamGrammarParser.WS); }
		public ITerminalNode WS(int i) {
			return GetToken(DreamGrammarParser.WS, i);
		}
		public SingleExpressionContext[] singleExpression() {
			return GetRuleContexts<SingleExpressionContext>();
		}
		public SingleExpressionContext singleExpression(int i) {
			return GetRuleContext<SingleExpressionContext>(i);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionCall; } }
	}

	[RuleVersion(0)]
	public FunctionCallContext functionCall() {
		FunctionCallContext _localctx = new FunctionCallContext(Context, State);
		EnterRule(_localctx, 12, RULE_functionCall);
		int _la;
		try {
			State = 197;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 175; funcName();
				State = 176; Match(T__1);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 178; funcName();
				{
				State = 179; leftParen();
				}
				State = 183;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==WS) {
					{
					{
					State = 180; Match(WS);
					}
					}
					State = 185;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				{
				State = 186; rightParen();
				}
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 188; funcName();
				{
				State = 189; leftParen();
				}
				State = 190; singleExpression(0);
				State = 193;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__2) {
					{
					State = 191; Match(T__2);
					State = 192; singleExpression(0);
					}
				}

				{
				State = 195; rightParen();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDeclarationContext : ParserRuleContext {
		public FuncNameContext funcName() {
			return GetRuleContext<FuncNameContext>(0);
		}
		public EqualsignContext equalsign() {
			return GetRuleContext<EqualsignContext>(0);
		}
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public LeftParenContext leftParen() {
			return GetRuleContext<LeftParenContext>(0);
		}
		public VariableDeclarationContext[] variableDeclaration() {
			return GetRuleContexts<VariableDeclarationContext>();
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return GetRuleContext<VariableDeclarationContext>(i);
		}
		public RightParenContext rightParen() {
			return GetRuleContext<RightParenContext>(0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDeclaration; } }
	}

	[RuleVersion(0)]
	public FunctionDeclarationContext functionDeclaration() {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(Context, State);
		EnterRule(_localctx, 14, RULE_functionDeclaration);
		int _la;
		try {
			State = 231;
			ErrorHandler.Sync(this);
